[gd_scene load_steps=2 format=2]

[ext_resource path="res://Creature.gd" type="Script" id=1]

[node name="Creature" type="KinematicBody2D" groups=["creatures"]]
script = ExtResource( 1 )

[node name="hitbox" type="CollisionShape2D" parent="."]
modulate = Color( 1, 0, 0, 1 )

[node name="detection" type="Area2D" parent="."]

[node name="detection_shape" type="CollisionShape2D" parent="detection"]
modulate = Color( 0, 1, 0.0392157, 1 )

[node name="attack_range" type="Area2D" parent="."]

[node name="attack_range_shape" type="CollisionShape2D" parent="attack_range"]

[node name="roam_target" type="Position2D" parent="."]

[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
